[package]
name = "letsencrypt-certs-aws"
version = "0.1.0"
authors = ["David Cuthbert <dacut@kanga.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acme2 = { version = "^0.5" }
async-trait = "^0.1"
aws_lambda_events = "^0.5"
base64 = "^0.13"
bytes = "^1.0"
env_logger = "^0.9"
futures = "^0.3"
http = "^0.2"
lamedh_attributes = { version = "^0.3" }
lamedh_http = { version = "^0.3" }
lamedh_runtime = { version = "^0.3" }
lazy_static = "^1.4"
log = "^0.4"
openssl = "^0.10"
ring = { version = "0.16.20" }
rusoto_acm = "^0.48"
rusoto_core = "^0.48"
rusoto_dynamodb = "^0.48"
rusoto_route53 = "^0.48"
rusoto_s3 = "^0.48"
rusoto_ssm = "^0.48"
serde = { version = "^1.0", features = ["derive"] }
serde_derive = "^1.0"
serde_json = "^1.0"
tokio = { version = "^1.12", features = ["macros"] }
url = "^2.2"
